Temporary fix for button on mobile
display none is set towards ::after on button hover

--- a/style.scss
+++ b/style.scss
@@ -130,12 +130,13 @@ a {
         &::after {
             transform: scalex(100%);
         }
-    }
 
+    }
+    
     &::after {
         content: '';
         width: 100%;
-
+        
         height: 100%;
         background: $paragraph;
         position: absolute;
@@ -145,7 +146,13 @@ a {
         z-index: -1;
         top:0;
         left:0;
+        
+    }
 
+    @include breakpoint(mobileonly) {
+        &::after {
+            display:none;
+        }    
     }
 }
 
